test/integration/cases/08-service-dual-stack/endpoint-ipv4.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: test-ipv4
subsets:
  - addresses:
      - ip: "1.1.1.1"
    ports:
      - name: test-ipv4
        port: 8080
        protocol: TCP
