test/integration/cases/08-service-dual-stack/endpoint-ipv6.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: test-ipv6
subsets:
  - addresses:
      - ip: "1::1"
    ports:
      - name: test-ipv6
        port: 8080
        protocol: TCP
