test/integration/cases/08-service-dual-stack/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-dual-stack
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: test-ipv4
            port:
              number: 8080
        path: /foo
        pathType: Prefix
      - backend:
          service:
            name: test-ipv6
            port:
              number: 8080
        path: /bar
        pathType: Prefix
