test/integration/cases/08-service-dual-stack/service-ipv4.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-ipv4
spec:
  ports:
  - name: test-ipv4
    port: 8080
    protocol: TCP
    targetPort: 8080
  type: ClusterIP
