test/integration/cases/08-service-dual-stack/service-ipv6.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-ipv6
spec:
  ipFamily: IPv6
  ports:
  - name: test-ipv6
    port: 8080
    protocol: TCP
    targetPort: 8080
  type: ClusterIP
